- Migrate autocomplete handler - Shortened descriptions of autocomplete options, they're fixed in length (100 chars) (closes #85) - Docs refered to 'youtube.key' which doesn't exist - Fix for immutable queue list (closes #84) - Fix for spotify not returning a track - Fix for cases where there's no videoId to be played to return an error message instead of an empty "Track Added"